--- a/Lab-1/lab1.ipynb
+++ b/Lab-1/lab1.ipynb
@@ -704,7 +704,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.12"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "370c26dca3254406d2b2a4db9ed059a4987c46e969c8f18be8beb37a53cb69e7"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
